--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+        "guzzlehttp/guzzle": "^6.3",
+        "flow/jsonpath": "^0.4.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
